# talks

./: .gitignore  .travis.yml  CNAME  README.md  atom.xml  deploy.sh  deploy_key.enc  deploy_key.pub  future.html  ideas.html  index.html  params.json  past.html  rss.xml  site.hs  talks.cabal
css/: default.css  material-fullpalette.css  material.css  ripples.css  roboto.css
talks/: 2014-02-24-cis194_introduction.md  2014-02-24.cis194_introduction.html  2014-02-24.cis194_introduction.md  2014-03-24-cis194_data_types.md  2014-03-24-comonads.md  2014-03-24.cis194_data_types.html  2014-03-24.cis194_data_types.md  2014-03-24.comonads.html  2014-03-24.comonads.md  2014-04-22-cis194_recursion_patterns.md  2014-04-22-free_monads_are_good_for_you.md  2014-04-22.cis194_recursion_patterns.html  2014-04-22.cis194_recursion_patterns.md  2014-04-22.free_monads_are_good_for_you.html  2014-04-22.free_monads_are_good_for_you.md  2014-05-27-cis194_higher_order_functions.md  2014-05-27-java8_functional.md  2014-05-27.cis194_higher_order_functions.html  2014-05-27.cis194_higher_order_functions.md  2014-05-27.java8_functional.html  2014-05-27.java8_functional.md  2014-06-24-cis194_typeclasses.md  2014-06-24-write_yourself_a_scheme.md  2014-06-24.cis194_typeclasses.html  2014-06-24.cis194_typeclasses.md  2014-06-24.write_yourself_a_scheme.html  2014-06-24.write_yourself_a_scheme.md  2014-07-22-cis194_lazyness.md  2014-07-22-learning_fp_with_spiderman.md  2014-07-22.cis194_lazyness.html  2014-07-22.cis194_lazyness.md  2014-07-22.learning_fp_with_spiderman.html  2014-08-26-scalaz.md  (+120 more)
(+4 files in other folders)
