name:               talks
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            PublicDomain
license-file:       LICENSE

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , pandoc
                  , containers
  ghc-options:      -threaded
  default-language: Haskell2010
